修复放下马桶车方向永远背对玩家 Mixin兼容优化
空中厕所大量用了@Redirect。【MC模组开发】这次来主观评价一下 Mixin 的 Injectors 的实用性 https://www.bilibili.com/video/BV1B48q65E7F
但兼容性并不好，评价为拉完了。使用MixinExtras 很好地解决了兼容性问题